# WasmVM.py

./: .gitignore  .plan  LICENSE  README.md  REPL.md  flake.nix  functions.py  lib.py  main.py  observers.py  pyproject.toml  serve_with_cors.py  shared.py  virtual_machine.py
.github/workflows/: deploy.yml
src/wasmvm/: __init__.py  functions.py  lib.py  shared.py  virtual_machine.py
static/: bun.lockb  index.html  package.json  vite.config.ts
static/src/: App.css  App.tsx  Box.tsx  wasmvmclient.ts
